@@ -1,5 +1,11 @@
 2000-02-09  Nick Clifton  <nickc@cygnus.com>
 
+	* config/arm/linux-elf.h (FUNCTION_PROFILER): Rename to
+	ARM_FUNCTION_PROFILER. 
+
+	* config/arm/netbsd.h (FUNCTION_PROFILER): Rename to
+	ARM_FUNCTION_PROFILER. 
+
 	* config/arm/linux-oldld.h: Imported from mainline sources.
 
 2000-02-07  Nick Clifton  <nickc@cygnus.com>
